--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   
-  <body id="home">і
+  <body id="home">
     <header class="header">
       <div class="header__top">
         <img src="images/logo.png" alt="Bose logo" />
