--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOSE</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="images/bose-logo.png" />
   </head>
   
   <body id="home">
